Bug 356110 - Line spacing not adjusted to font in printouts
Summary: Line spacing not adjusted to font in printouts
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-30 11:32 UTC by Qianli Ma
Modified: 2016-03-24 17:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Qianli Ma 2015-11-30 11:32:32 UTC
When printing a document with a modified schema (different font typeface or size than the default), the line spacing is not adjusted to the font. This can result overlapped text when printing with a large font size and very large line spacing with a small font size.


Reproducible: Always

Steps to Reproduce:
1. Modify the printing schema in Kwrite/Kate to use a larger font size, e.g. 18 pt.
2. Print a document (to a PDF file).


Actual Results:  
The line spacing in the resulting document is too small, resulting overlapped text.


Expected Results:  
Adjust the line spacing according to the font settings

The problem might be related to Bug 344976. After the git commit 7d824fd the font and color schema are honored but line spacing are still fixed.
Comment 1 Dominik Haumann 2016-03-24 17:10:11 UTC
Git commit c1cba0174025fe8f2779ed30ce859b05914eba4b by Dominik Haumann.
Committed on 24/03/2016 at 17:10.
Pushed by dhaumann into branch 'master'.

printing: use font size from selected printing schema

M  +21   -7    src/printing/printpainter.cpp
M  +4    -5    src/printing/printpainter.h

http://commits.kde.org/ktexteditor/c1cba0174025fe8f2779ed30ce859b05914eba4b
Comment 2 Dominik Haumann 2016-03-24 17:10:42 UTC
Fixed for the next Frameworks release - thanks for good report :)