printing: use font size from selected printing schema

BUG: 356110